tests/nginx-to-traefik/fixtures/basic-three-services/input/common.service/overlays/dev/grafana-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts: ["grafana.dev.awoo.org"]
    secretName: grafana-tls
  rules:
  - host: grafana.dev.awoo.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
