tests/nginx-to-traefik/fixtures/basic-three-services/input/common.service/overlays/dev/temporal-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: temporal-web
  namespace: temporal
spec:
  ingressClassName: traefik
  tls:
  - hosts: ["temporal.dev.example.com"]
    secretName: temporal-web-tls
  rules:
  - host: temporal.dev.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: temporal-web
            port:
              number: 8080
